--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint",
+    "test": "echo \"NO TESTS DEFINED\"",
     "prepare": "husky install"
   },
   "dependencies": {
