--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview",
     "lint": "eslint",
     "test": "echo \"NO TESTS DEFINED\"",
-    "prepare": "husky install"
+    "prepare": "husky install",
+
+    "generateQuestionBase": "ts-node-esm scripts/createQuestionBase.ts"
   },
   "dependencies": {
     "react": "18.2.0",
@@ -29,6 +31,8 @@
     "@vitejs/plugin-react": "^3.0.0",
     "@vitejs/plugin-react-swc": "^3.0.0",
     "autoprefixer": "^10.4.13",
+    "cheerio": "^1.0.0-rc.12",
+    "daisyui": "^2.43.0",
     "eslint": "^8.29.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
@@ -42,6 +46,7 @@
     "husky": "^8.0.2",
     "postcss": "^8.4.19",
     "tailwindcss": "^3.2.4",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
   }
