--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "frontend-template",
   "private": true,
-  "version": "1.0.0",
+  "version": "0.1.0",
   "type": "module",
   "description": "React template with Vite, TypeScript, ESLint, Prettier, Tailwind",
   "scripts": {
@@ -11,8 +11,7 @@
     "lint": "eslint",
     "test": "echo \"NO TESTS DEFINED\"",
     "prepare": "husky install",
-
-    "generateQuestionBase": "ts-node-esm scripts/createQuestionBase.ts"
+    "generateQuestionBase": "ts-node-esm --project tsconfig.vite.json scripts/createQuestionBase.ts"
   },
   "dependencies": {
     "react": "18.2.0",
@@ -26,6 +25,7 @@
     "@types/prettier": "^2.7.1",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "@types/xlsx": "^0.0.36",
     "@typescript-eslint/eslint-plugin": "^5.46.0",
     "@typescript-eslint/parser": "^5.46.0",
     "@vitejs/plugin-react": "^3.0.0",
@@ -36,7 +36,7 @@
     "eslint": "^8.29.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
-    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-prettier": "^4.2.1",
@@ -45,9 +45,11 @@
     "eslint-plugin-simple-import-sort": "^8.0.0",
     "husky": "^8.0.2",
     "postcss": "^8.4.19",
+    "prettier": "2.8.7",
     "tailwindcss": "^3.2.4",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3",
-    "vite": "^4.0.0"
+    "vite": "^4.0.0",
+    "xlsx": "^0.18.5"
   }
 }
