--- a/tsconfig.vite.json
+++ b/tsconfig.vite.json
@@ -1,9 +1,16 @@
 {
   "compilerOptions": {
     "composite": true,
+    "target": "ESNext",
     "module": "ESNext",
-    "moduleResolution": "Node",
+    "moduleResolution": "node",
     "allowSyntheticDefaultImports": true
   },
-  "include": ["vite.config.ts"]
+  "include": [
+    "vite.config.ts",
+    ".eslintrc.cjs",
+    "prettier.config.cjs",
+    "scripts",
+    "common"
+  ]
 }
